--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -15,4 +15,9 @@
     <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="uploads\processed\" />
+    <Folder Include="uploads\" />
+  </ItemGroup>
+
 </Project>
